--- a/app/src/main/res/layout/activity_materia_test.xml
+++ b/app/src/main/res/layout/activity_materia_test.xml
@@ -8,17 +8,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.fatec.activity.MateriaTestActivity">
 
+
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
-
-    <TextView
-        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Todas as Materias:" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/linearMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
+    </ScrollView>
 
 </RelativeLayout>
