--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0277BD</color>
+    <color name="colorPrimaryLight">#03A9F4</color>
     <color name="colorPrimaryDark">#01579B</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColor">#000000</color>
