--- a/app/src/main/res/layout/layout_resposta.xml
+++ b/app/src/main/res/layout/layout_resposta.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryLight"
             android:id="@+id/backgroundResposta">
 
             <TextView
@@ -46,10 +46,10 @@
             android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/respostaCriador"
+            android:id="@+id/dataResposta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Criador da Dúvida"
+            android:text="Data Resposta"
             android:textSize="15dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
