--- a/app/src/main/res/layout/activity_resposta_test.xml
+++ b/app/src/main/res/layout/activity_resposta_test.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.fatec.activity.RespostaTest">
+    tools:context="edu.fatec.activity.RespostaTestActivity">
 
     <LinearLayout
         android:orientation="vertical"
