--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,20 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="edu.fatec.activity.LoginActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
-
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical">
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <Space
                 android:layout_width="match_parent"
@@ -72,14 +63,23 @@
                 android:layout_height="30dp" />
 
             <Button
-                android:id="@+id/inserirUsuario"
+                android:id="@+id/loginUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/colorPrimary"
                 android:text="Login"
                 android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/registreUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@android:color/transparent"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="Registrar novo usuário"
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
-    </ScrollView>
 
 </RelativeLayout>
