--- a/app/src/main/res/layout/layout_duvida.xml
+++ b/app/src/main/res/layout/layout_duvida.xml
@@ -10,25 +10,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/backgroundDuvida"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:id="@+id/backgroundDuvida">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/duvidaTitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center_vertical"
                 android:text="Titulo da Dúvida"
                 android:textColor="@android:color/white"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
         </LinearLayout>
 
         <TextView
@@ -36,27 +37,46 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/backgroundDuvida"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center_vertical"
             android:text="Conteudo da Dúvida"
             android:textSize="15sp" />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/duvidaConteudo"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark" />
+
         <TextView
             android:id="@+id/duvidaCriador"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/replyDuvida"
+            android:layout_alignLeft="@+id/duvidaConteudo"
+            android:layout_alignStart="@+id/duvidaConteudo"
+            android:layout_marginBottom="4dp"
             android:text="Criador da Dúvida"
-            android:textSize="15sp"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/replyDuvida"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/duvidaConteudo"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:layout_below="@+id/duvidaConteudo"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:background="@drawable/ic_reply_black_24dp"
+            android:backgroundTint="@color/colorPrimaryDark" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
