--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -13,7 +13,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cardList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="fill_parent"
+        />
 
     <android.support.design.widget.FloatingActionButton
         xmlns:app="http://schemas.android.com/apk/res-auto"
