--- a/app/src/main/res/layout/layout_duvida.xml
+++ b/app/src/main/res/layout/layout_duvida.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="2dp">
+    card_view:cardCornerRadius="2dp"
+    android:elevation="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -49,19 +50,17 @@
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_below="@id/duvidaConteudo"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@android:color/darker_gray" />
 
         <TextView
-            android:id="@+id/duvidaCriador"
+            android:id="@+id/infoDuvida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/replyDuvida"
             android:layout_alignLeft="@+id/duvidaConteudo"
             android:layout_alignStart="@+id/duvidaConteudo"
             android:layout_marginBottom="4dp"
-            android:text="Criador da Dúvida"
+            android:text="Informações"
             android:textSize="15sp" />
 
         <Button
@@ -76,7 +75,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/ic_reply_black_24dp"
-            android:backgroundTint="@color/colorPrimaryDark" />
+            android:backgroundTint="@color/colorPrimaryDark"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
