--- a/app/src/main/res/layout/layout_resposta.xml
+++ b/app/src/main/res/layout/layout_resposta.xml
@@ -5,38 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="2dp">
+    card_view:cardCornerRadius="2dp"
+    android:elevation="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryLight"
-            android:id="@+id/backgroundResposta">
-
-            <TextView
-                android:id="@+id/respostaTitulo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="Criador da Resposta"
-                android:textColor="@android:color/white"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:textSize="18dp"/>
-        </LinearLayout>
-
         <TextView
             android:id="@+id/respostaConteudo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/backgroundResposta"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
@@ -45,19 +24,49 @@
             android:text="Conteudo da Resposta"
             android:textSize="15dp" />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/respostaConteudo"
+            android:background="@android:color/darker_gray"
+            android:id="@+id/view" />
+
         <TextView
-            android:id="@+id/dataResposta"
+            android:id="@+id/infoResposta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data Resposta"
+            android:text="Info Resposta"
             android:textSize="15dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:layout_below="@+id/respostaConteudo"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentLeft="true" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:textSize="15dp"
+            android:text="0"
+            android:id="@+id/qtdFavorita"
+            android:layout_alignTop="@+id/view"
+            android:layout_alignParentRight="true" />
+
+        <Button
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="2dp"
+            style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/respostaFavorita"
+            android:layout_below="@+id/respostaConteudo"
+            android:background="@drawable/ic_star_border_black_24dp"
+            android:layout_toLeftOf="@id/qtdFavorita"/>
+
 
     </RelativeLayout>
 
