--- a/app/src/main/res/layout/activity_resposta_test.xml
+++ b/app/src/main/res/layout/activity_resposta_test.xml
@@ -36,7 +36,9 @@
         android:paddingRight="@dimen/activity_margin_recycle"
         android:paddingTop="@dimen/activity_margin_recycle"
         android:layout_marginBottom="5dp"
-        android:layout_above="@+id/backgroundResposta" />
+        android:clipToPadding="false"
+        android:paddingBottom="70dp"
+        android:scrollbars="vertical"/>
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/novaResposta"
@@ -56,7 +58,8 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/backgroundResposta"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
+        android:minHeight="55dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         card_view:cardCornerRadius="10dp"
@@ -67,13 +70,14 @@
 
         <EditText
             android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-
+            android:layout_height="fill_parent"
             android:layout_marginRight="5dp"
             android:layout_marginLeft="10dp"
             android:id="@+id/resposta"
             android:layout_weight="1"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:hint="Responder esta dúvida"
+            android:minHeight="55dp" />
 
     </android.support.v7.widget.CardView>
 
