Pequenas alterações no layout das activities. Acrescentado rippleColor diferente para os FAB

--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimaryLight"
+        android:background="@color/colorWarning"
         android:orientation="horizontal">
 
         <TextView
