--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0277BD</color>
-    <color name="colorPrimaryLight">#03A9F4</color>
-    <color name="colorPrimaryDark">#01579B</color>
+    <color name="colorPrimary">#00838F</color>
+    <color name="colorPrimaryDark">#006064</color>
+    <color name="colorWarning">#FFA726</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColor">#000000</color>
 </resources>
