--- a/app/src/main/res/layout/activity_nova_duvida_test.xml
+++ b/app/src/main/res/layout/activity_nova_duvida_test.xml
@@ -11,10 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:padding="@dimen/activity_vertical_margin"
         android:layout_alignParentTop="true">
 
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,7 +30,8 @@
                 android:layout_margin="10dp"
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
-                android:hint="Titúlo da Dúvida" />
+                android:hint="Titúlo da Dúvida"
+                android:layout_below="@+id/labelTituloDuvida"/>
 
         </android.support.v7.widget.CardView>
 
@@ -62,8 +60,7 @@
             android:id="@+id/backgroundMateriasDuvida"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:minHeight="55dp"
+            android:layout_marginBottom="15dp"  android:minHeight="55dp"
             card_view:cardCornerRadius="2dp">
 
             <Spinner
@@ -95,7 +92,6 @@
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
-
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/inserirNovaDuvida"
