--- a/app/src/main/res/layout/activity_resposta_test.xml
+++ b/app/src/main/res/layout/activity_resposta_test.xml
@@ -31,7 +31,7 @@
         android:id="@+id/swipeRefreshResposta"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/conteudoDuvida">
+        android:layout_below="@+id/backgroundDuvidaResposta">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cardList"
@@ -67,7 +67,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Responder esta dúvida"
-            android:minHeight="80dp" />
+            android:minHeight="80dp"/>
 
     </android.support.v7.widget.CardView>
 
