--- a/app/src/main/res/layout/activity_duvida_test.xml
+++ b/app/src/main/res/layout/activity_duvida_test.xml
@@ -13,16 +13,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:background="@color/colorWarning"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal|center_vertical">
 
         <TextView
             android:id="@+id/textInfoDuvida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_margin="10dp"
             android:text="Atualizando informações de dúvidas"
             android:textColor="@color/textColorPrimary"
             android:textSize="15sp" />
