--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,19 +2,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.fatec.activity.LoginActivity">
+
+    <LinearLayout
+        android:id="@+id/infoLogin"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorWarning"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textInfoLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Realizando login"
+            android:layout_margin="10dp"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="15sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBarLogin"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="10dp"
+            android:indeterminateTint="@color/textColorPrimary"/>
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_below="@id/infoLogin"
+        android:layout_margin="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="fill_parent"
