Grandes Mudanças: Refatoração de classes, removendo tag "Test" e refatorando métodos.

--- a/app/src/main/res/layout/activity_materia.xml
+++ b/app/src/main/res/layout/activity_materia.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="@dimen/activity_margin_recycle"
     android:layout_marginLeft="@dimen/activity_margin_recycle"
     android:layout_marginRight="@dimen/activity_margin_recycle"
-    tools:context="edu.fatec.activity.MateriaTestActivity">
+    tools:context="edu.fatec.activity.MateriaActivity">
 
     <ExpandableListView
         android:id="@+id/listaMaterias"
