--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,121 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_height="match_parent"
+        tools:context="edu.fatec.activity.DuvidaTestActivity">
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/infoDuvida"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:gravity="center_horizontal|center_vertical"
+            android:background="@color/colorWarning"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textInfoDuvida"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="12dp"
+                android:text="Atualizando informações de dúvidas"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="15sp" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_margin="10dp"
+                android:indeterminateTint="@color/textColorPrimary" />
+        </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshDuvida"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/infoDuvida">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycleViewDuvidas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingBottom="70dp"
+                android:paddingLeft="@dimen/activity_margin_recycle"
+                android:paddingRight="@dimen/activity_margin_recycle"
+                android:paddingTop="@dimen/activity_margin_recycle"
+                android:scrollbars="vertical" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/novaDuvida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Testes de módulos"
-            android:id="@+id/textDescricao"
-            android:paddingBottom="10dp"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_add_white_24dp"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:borderWidth="0dp"
+            app:elevation="5dp"
+            app:rippleColor="@color/colorPrimary" />
+    </RelativeLayout>
 
-        <Button
+    <LinearLayout
+        android:id="@+id/backgroundList"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#ffeeeeee"
+        android:orientation="vertical">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MATERIAS"
-            android:id="@+id/materias"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal" />
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical">
 
-        <Button
+            <TextView
+                android:id="@+id/infoNomeUsuario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nome do Usuario"
+                android:textSize="20dp"
+                android:layout_centerVertical="true"
+                android:paddingLeft="15dp"/>
+
+            <TextView
+                android:id="@+id/infoEmailUsuario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="usuario@email.com.br"
+                android:textSize="15dp"
+                android:layout_below="@id/infoNomeUsuario"
+                android:paddingLeft="15dp" />
+        </RelativeLayout>
+
+        <ListView
+            android:id="@+id/drawerList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="USUARIO"
-            android:id="@+id/usuario"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DUVIDAS"
-            android:id="@+id/duvidas"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal" />
-
+            android:layout_height="match_parent"
+            android:background="#ffeeeeee"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:paddingTop="10dp"/>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Versão 0.5"
-        android:id="@+id/textVersao"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
