--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -71,6 +71,12 @@
 
     </android.support.v7.widget.CardView>
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/backgroundResposta"
+        android:background="#738c8c8c" />
+
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/inserirResposta"
         android:layout_width="wrap_content"
