Pequena mudança no layout de respostas. Diminuido tamanho do botão para e area da resposta.

--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -52,7 +52,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:minHeight="80dp"
+        android:minHeight="70dp"
         card_view:cardCornerRadius="2dp">
 
         <EditText
@@ -67,7 +67,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:hint="Responder esta dúvida"
-            android:minHeight="80dp"/>
+            android:minHeight="70dp"/>
 
     </android.support.v7.widget.CardView>
 
@@ -79,11 +79,11 @@
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/inserirResposta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="14dp"
         android:src="@drawable/ic_send_white_24dp"
         app:backgroundTint="@color/colorPrimaryDark"
