--- a/app/src/main/res/values-v21/colors.xml
+++ b/app/src/main/res/values-v21/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorWarning">#FFA726</color>
     <color name="colorFail">#ff4444</color>
     <color name="colorSuccess">#00E676</color>
+    <color name="colorAccent">#7e8ce7</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColor">#000000</color>
 </resources>
