Adicionado color accent no aplicativo. Adicionado actionColor no aplicativo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,10 +70,10 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
             android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="@color/colorPrimaryDark"
+            app:backgroundTint="@color/colorAccent"
+            app:rippleColor="@color/colorAccentRipple"
             app:borderWidth="0dp"
-            app:elevation="5dp"
-            app:rippleColor="@color/colorPrimary" />
+            app:elevation="5dp"/>
     </RelativeLayout>
 
     <LinearLayout
