--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -86,9 +86,9 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="14dp"
         android:src="@drawable/ic_send_white_24dp"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="@color/colorAccent"
+        app:rippleColor="@color/colorAccentRipple"
         app:borderWidth="0dp"
-        app:elevation="5dp"
-        app:rippleColor="@color/colorPrimary" />
+        app:elevation="5dp"/>
 
 </RelativeLayout>
