--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,6 +4,8 @@
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:actionMenuTextColor">@color/textColorPrimary</item>
+        <item name="android:actionModeBackground">@color/colorAccent</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:editTextColor">@android:color/black</item>
         <item name="android:windowContentTransitions">true</item>
