Inserido opcao de deslogar da conta

--- a/app/src/main/res/layout/activity_resposta.xml
+++ b/app/src/main/res/layout/activity_resposta.xml
@@ -79,13 +79,14 @@
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/inserirResposta"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
         android:src="@drawable/ic_send_white_24dp"
+        app:fabSize="mini"
         app:backgroundTint="@color/inactive"
         app:rippleColor="@color/colorAccentRipple"
         app:borderWidth="0dp"
